app/assets/stylesheets/custom.css.scss
@import "font-awesome-sprockets";
@import "font-awesome";
@import "bootstrap-sprockets";
@import "bootstrap";

/* mixins, variables, etc.. */
body {
  font-family: 'Open Sans';
}

$gray-medium-light: #eaeaea;
$red-main: #ff4444;
$red-hilight: #ffc1c1;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* universal */
body {
  padding-top: 60px;
}

section {
  overflow: auto;
}
textarea {
  resize: vertical;
}
.center {
  text-align: center;
}

/* typography */
h1, h2, h3, h4, h5, h6 {
  line-height: 1;
  margin-bottom: 20px;
}
h1 {
  font-size: 3em;
  letter-spacing: -2px;
  text-align: center;
}
h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  text-align: center;
  font-weight: normal;
  color: $gray-light;
}
p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */
#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #EF5A50;
  text-transform: uppercase;
  padding-top: 9px;
  font-weight: 700;
  letter-spacing: 2px;
  &:hover {
    text-decoration: none;
  }
}

#sublogo {
  float: left;
  margin-right: 10px;
  font-size: 1.1em;
  color: #777777;
  letter-spacing: -1px;
  padding-top: 13px;
  &:hover {
    text-decoration: none;
  }
}

/* footer */
footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $gray-medium-light;
  color: $gray-light;
  a {
  color: $gray;
  &:hover {
    color: $gray-darker;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
  }
  ul li {
    float: right;
    margin-left: 15px;
  }
}

/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */
aside {
  section.user_info {
  margin-top: 20px;
  }
  section {
    padding: 10px 0;
    margin-top: 20px;
    &:first-child {
    border: 0;
    padding-top: 0;
    }
  span {
    display: block;
    margin-bottom: 3px;
    line-height: 1;
    }
  h1 {
    font-size: 1.4em;
    text-align: left;
    letter-spacing: -1px;
    margin-bottom: 3px;
    margin-top: 0px;
    }
  }
}

/* forms */
input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}
input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}
.field_with_errors {
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}

// .checkbox {
//   margin-top: -10px;
//   margin-bottom: 10px;
//   span {
//     margin-left: 20px;
//     font-weight: normal;
//   }
// }

.checkbox, .radio {
  padding-left: 20px;
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

/* Users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-bottom: 1px solid $gray-lighter;
  }
}

/////////////////////////////////////* add on *//////////////////////////////////////////////////////////////////////////////
a, a:hover {
  color: inherit;
  text-decoration: none;
}

.rest-image {
  width: 100%;
  max-height: 280px;
}

.navbar-custom {
    background-color: white;
    border-color: $gray-medium-light;
}

.nav.navbar-nav.navbar-right li a {
    color: #EF5A50;
}

.nav.navbar-nav.navbar-right li a.text-color {
    color: #777;
}

.navbar-header .navbar-toggle .icon-bar {
    background-color: black;
}

.dropdown-menu {
  min-width: 0px;
}

.badge-danger {
  background-color: $red-main;
}

.color-hover {
  &:hover{
    background-color: $red-hilight;
    border-right: solid 2px;
    border-color: $red-main;
    padding-right: 13px;
  }
}

.food-cat {
  color: $red-main;
  margin-top: 10px;
  padding-bottom: 5px;
  border-bottom: solid 1.5px;
  border-color: $red-main;
}

.food-name {
  color: gray;
  padding-left: 10px;
  padding-right: 50px;
  font-size: 0.9em;
}

.recommend {
  color: $red-main;
}

.container {
  max-width: 800px;
  background: white;
}

.jumbotron {
  color: #FFF; // change text color
  height: 280px;
  color: white;
  text-shadow: #444 0 3px 3px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50%;
  padding-top: 90px;
}

.rest-col {
  padding: 5px;
  height: 200px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50%;
  padding-top: 90px;
}

.center-norep {
  background-position: center;
  background-repeat: no-repeat;
}

.menu-img {
  height: 200px;
}

.medium {
  line-height: 80%;
  margin-bottom: 5px;
}

p.medium {
  line-height: 80%;
  margin-top: 10px;
}

hr {
  margin: 5px;
}

.input_checkbox input {
  width: auto !important;
}

.food-item {
  padding: 10px 15px 10px 10px;
}

.food-group {
  padding-bottom: 10px;
}

.food-price {
  float: right;
}

.hide-mobile {
  display: inline;
}

ul {
  margin: 0;
}
ul.option-lists {
  list-style-type: none;
}
ul.option-lists > li {
  text-indent: -35px;
  color: #A9A9A9;
}
ul.option-lists > li:before {
  content: "- ";
  text-indent: -35px;
}

div.container {
  padding-left: 4px;
  padding-right: 4px;
}

.thumbnail {
  margin-bottom: 10px;
  	-webkit-box-shadow: 0 8px 6px -6px  #999;
	   -moz-box-shadow: 0 8px 6px -6px  #999;
	        box-shadow: 0 8px 6px -6px #999;
}

#goback {
  margin-left: 5px;
  color: white;
}

.geomap {
  height: 200px;
  width: 100%;
}

.alert {
  margin-top: -8px;
  margin-bottom: 10px;
}

.jumbotron-landing {
  padding: 150px;
  background-size: 100% 100%;
  background-color: #999;
  background-blend-mode: multiply;
  background-repeat:no-repeat;
  margin-top: -10px;
  background-image: image-url("landing_bg.png");
  background-size: cover;
  min-height: 680px;
  color: white;
}

@media only screen and (min-device-width: 1px) and (max-device-width: 630px) {
  .jumbotron-landing {
    background-image: image-url("landing_bg_mobile.png");
    height: 580px;
    .landing-title {
      font-size: 30px;
      font-weight: 300;
    }
  }
}

.tagline {
  color: white;
  margin-bottom: 20px;
  font-size: 2.0em;
  padding-top: 10px;
  padding-bottom: 10px;

}
@media only screen and (max-width: 768px) {
  .hide-mobile {
    display: none;
  }
  .jumbotron-landing {
    padding: 20px;
  }
  .row {
    margin-left: 0px;
    margin-right: 0px;
  }
  .col-sm-12, .col-sm-6 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

.pac-container, .pac-item {
    width: inherit !important;
    z-index: 100000;
}

.address_header {
  display: inline-block;
  vertical-align: middle;
  max-width: 220px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-left: 3px;
}

.container > .navbar-header,
.container > .navbar-collapse,
.container-fluid > .navbar-header,
.container-fluid > .navbar-collapse {
  margin-right: 0px;
  margin-left: 0px;
}

@media only screen and (min-width: 768px) {
  .dropdown-location {
    min-width: 300px;
  }
}

.subthai {
  font-size: 1em;
  letter-spacing: -1px;
  font-weight: normal;
  color: $gray-light;
}

.navbar .container {
  max-width: 100%;
}

@media only screen and (min-width: 768px) {
  .navbar-left {
    margin-left: 5px;
  }
}

@media only screen and (min-width: 1090px) {
  .navbar-left {
    margin-left: 13%;
  }
}

.theme-color {
  color: #EF665E;
}

.text-color {
  color: #777;
}

.navbar .button-offset {
  margin-top: 4px;
}

.theme-background {
  background: white;
}

.location {
  text-align: center;
}

.container-fluid.landing-page-pane {
  padding: 0px;
}

.landing-pane-bg {
  color: white;
  text-align: center;
  padding-top: 40px;
  padding-left:10px;
  padding-right: 10px;
  height: 680px;
}

.landing-pane {
  background-color: #fff;
  text-align: center;
  height: 680px;
  padding-top: 40px;
}

.landing-pane.feature {
  height: 480px;

}

img {
  max-width: 100%;
  height: auto;
  width: auto\9; /* ie8 */
}

.landing-pane-bg.red {
  background-color: #EF665E;
}

.landing-pane-bg.black {
  background-color: black;
}

.lading-pane-input {
  width: 200px;
}

body {
  position: relative;
  margin: 0;
  padding-bottom: 6rem;
  min-height: 100%;
}

.footer {
  position: absolute;
  right: 0;
  /*bottom: 0;*/
  left: 0;
  padding: 1rem;
  background-color: #efefef;
  text-align: center;
  margin-top: 0;
}


.landing-title {
  font-size: 40px;
  letter-spacing: 5px;
  font-weight: 100;
  margin-bottom: 20px;
}

.gray-background {
  background-color: #383737;
}
// Checkout related
.order-checkout {
  margin-top: 10px;
  margin-bottom: 30px;
  .user-information-container {
    margin-bottom: 20px;
  }

  @media only screen and (min-device-width: 1px) and (max-device-width: 630px) {
    .order-summary-container {
      width: 100%;
    }
    .user-information-container{
      width: 100%;
    }
  }
  .deliverying-to-container, .phone-info-container, .credit-card-payment-container {
    margin-top: 30px;
    margin-left: 30px;
    .title {
      font-size: 20px;
      font-weight: 600;
    }
    .detail {
      font-size: 16px;
      font-weight: 300;
    }
  }

  .order-summary {
    border-radius: 6px;
    border: 1px solid #f0f0f0;
    .title {
      font-size: 24px;
      margin-top: 30px;
      margin-bottom: 30px;
      margin-left: 30px;
      font-weight: 600;
    }
    .order-details {
      margin-top: 30px;
      margin-left: 70px;
      margin-right: 70px;
      @media only screen
        and (min-device-width: 1px)
        and (max-device-width: 630px) {
        margin-right: 30px;
        margin-left: 30px;
      }
      .total-items-container, .delivery-fee-container {
        clear: both;
        height: 35px;
      }
      .total-items, .delivery-fee {
        float: left;
        color: #878484;
      }
      .price, .delivery-price {
        float: right;
      }
    }
    .order-total {
      margin-top: 20px;
      margin-bottom: 20px;
      text-align: center;
      font-size: 22px;
      font-weight: 700;
    }
    .order-items {
      margin-left: 30px;
      margin-right: 30px;
      .order-item {
        margin-top: 10px;
        margin-bottom: 20px;
        .info {
          width: 100%;
          .name {
            font-size: 16px;
            width: 80%;
            float: left;
            color: #444;
          }
          .quantity {
            padding-top:2px;
            width: 10%;
            color: #EF4E42;
            float: right;
            font-weight: 600;
          }
          .close-icon {
            color: #CECBCB;
            font-size: 11px;
            font-weight: 100;
            float:right;
            width: 3%;
            padding-top:4px;
          }
        }
        .price {
          color: #878484;
          font-weight: 100;
          clear:both;
        }
      }
    }
  }
}

.cash-payment-container {
  height: 80px;
  #cash-payment {
    width: 200px;
    margin: auto;
  }

  #pay-with-cash {
    background-color: #44A67C;
    border: none;
  }
}

.phone-note {
  color: #EF665E;
  font-size: 0.7em;
}
.sign-up-title, .sign-in-title{
  font-size: 24px;
  margin-bottom: 20px;
  text-align: center;
}

.ball {
  display: block;
  position: absolute;
  left: -100px;
  top: 400px;
  opacity: 0;
  width: 10px;
  height: 10px;
  background-color: $red-main;
  -moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
}

